--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 ### STS ###
 .apt_generated
@@ -12,12 +13,18 @@ target/
 .settings
 .springBeans
 .sts4-cache
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+# testing
+/coverage
 
 ### NetBeans ###
 /nbproject/private/
@@ -28,6 +35,18 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+# production
+/build
 
 ### VS Code ###
 .vscode/
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
